chore: add http-* packages to build:api script

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   "scripts": {
     "build:components": "lerna run build --scope=@webiny/serverless-* --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
-    "build:api": "lerna run build --scope=@webiny/api* --stream",
+    "build:api": "lerna run build --scope=@webiny/api* --scope=@webiny/http-* --stream",
     "build:packages": "lerna run build --scope=@webiny/* --ignore=@webiny/serv* --stream",
     "watch:apps": "lerna run watch --scope=@webiny/app* --stream --parallel",
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
