--- a/packages/api-files/package.json
+++ b/packages/api-files/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-files"
   },
   "description": "The API for Webiny Admin's File Manager module.",
   "contributors": [
