--- a/packages/api-google-tag-manager/package.json
+++ b/packages/api-google-tag-manager/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-google-tag-manager"
   },
   "description": "The API for the Webiny Google Tag Manager (webiny-app-google-tag-manager) app.",
   "author": "Adrian Smijulj",
