--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-headless-cms"
   },
   "description": "GraphQL API for Webiny Headless CMS.",
   "contributors": [
