--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-i18n"
   },
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>",
