--- a/packages/api-mailchimp/package.json
+++ b/packages/api-mailchimp/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-mailchimp"
   },
   "description": "The API for the Webiny Mailchimp (webiny-app-mailchimp) app.",
   "author": "Adrian Smijulj",
