--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
+    "url": "https://github.com/webiny/webiny-js.git",
+    "directory": "packages/api-page-builder"
   },
   "description": "The API for the Webiny Page Builder (webiny-app-page-builder) app.",
   "contributors": [
