--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,11 +47,7 @@
     "access": "public",
     "directory": "."
   },
-  "scripts": {
-    "build": "yarn rimraf ./dist *.tsbuildinfo && mkdir dist && cp -R cli.js bin-cli.js bin-scripts.js scripts.js config create sls dist/",
-    "postbuild": "cp package.json LICENSE README.md dist/",
-    "prepublishOnly": "yarn build"
-  },
+  "scripts": {},
   "adio": {
     "ignoreDirs": [
       "/create/template/",
