--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -42,7 +42,9 @@
       "@webiny/app/*": ["./packages/app/src/*"],
       "@webiny/app": ["./packages/app/src"],
       "@webiny/app-template": ["./packages/app-template/src"],
+      "@webiny/app-template-site": ["./packages/app-template-site/src"],
       "@webiny/app-template-admin": ["./packages/app-template-admin/src"],
+      "@webiny/app-template-admin-full": ["./packages/app-template-admin-full/src"],
       "@webiny/app-admin/*": ["./packages/app-admin/src/*"],
       "@webiny/app-admin": ["./packages/app-admin/src"],
       "@webiny/app-cookie-policy/*": ["./packages/app-cookie-policy/src/*"],
