--- a/packages/app-template-admin-full/package.json
+++ b/packages/app-template-admin-full/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@webiny/app-template-admin",
+  "name": "@webiny/app-template-admin-full",
   "version": "1.0.0",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/webiny/webiny-js.git",
-    "directory": "packages/app-template-admin"
+    "directory": "packages/app-template-admin-full"
   },
-  "description": "Package for building Webiny app templates.",
-  "author": "Webiny Ltd",
+  "description": "Complete Webiny Admin setup.",
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>",
     "Sven Al Hamad <sven@webiny.com>",
@@ -19,11 +18,19 @@
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^3.0.2",
     "@webiny/app-admin": "^3.0.2",
+    "@webiny/app-cookie-policy": "^3.0.4",
+    "@webiny/app-form-builder": "^2.0.5",
+    "@webiny/app-form-builder-theme": "^2.0.3",
+    "@webiny/app-google-tag-manager": "^3.0.4",
     "@webiny/app-i18n": "^3.0.2",
+    "@webiny/app-mailchimp": "^3.0.5",
+    "@webiny/app-page-builder": "^3.1.3",
+    "@webiny/app-page-builder-theme": "^2.0.4",
     "@webiny/app-security": "^3.0.3",
     "@webiny/app-plugin-security-cognito": "^3.0.2",
     "@webiny/app-plugin-security-cognito-theme": "^2.0.3",
     "@webiny/app-template": "^1.0.0",
+    "@webiny/app-typeform": "^3.0.5",
     "@webiny/react-router": "^2.0.1",
     "@webiny/ui": "^3.1.0"
   },
