--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -30,6 +30,7 @@
     "lodash.upperfirst": "^4.3.1",
     "lodash.forown": "^4.4.0",
     "lodash.isobject": "^3.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "pluralize": "^8.0.0"
   },
   "devDependencies": {
