--- a/packages/app-template-admin-full/tsconfig.build.json
+++ b/packages/app-template-admin-full/tsconfig.build.json
@@ -4,21 +4,15 @@
   "exclude": [
     "node_modules",
     "./dist",
-    "../app",
-    "../app-admin",
-    "../app-i18n",
     "../app-cookie-policy",
     "../app-google-tag-manager",
     "../app-mailchimp",
     "../app-typeform",
-    "../app-plugin-security-cognito",
-    "../app-plugin-security-cognito-theme",
     "../app-page-builder",
     "../app-page-builder-theme",
     "../app-form-builder",
     "../app-form-builder-theme",
-    "../app-template",
-    "../ui"
+    "../app-template-admin"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -26,20 +20,14 @@
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../app/tsconfig.build.json" },
-    { "path": "../app-admin/tsconfig.build.json" },
-    { "path": "../app-i18n/tsconfig.build.json" },
     { "path": "../app-cookie-policy/tsconfig.build.json" },
     { "path": "../app-google-tag-manager/tsconfig.build.json" },
     { "path": "../app-mailchimp/tsconfig.build.json" },
     { "path": "../app-typeform/tsconfig.build.json" },
-    { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
-    { "path": "../app-plugin-security-cognito-theme/tsconfig.build.json" },
     { "path": "../app-page-builder/tsconfig.build.json" },
     { "path": "../app-page-builder-theme/tsconfig.build.json" },
     { "path": "../app-form-builder/tsconfig.build.json" },
     { "path": "../app-form-builder-theme/tsconfig.build.json" },
-    { "path": "../app-template/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" }
+    { "path": "../app-template-admin/tsconfig.build.json" }
   ]
 }
