chore: adjust "build" command

--- a/components/serverless-apollo-service/package.json
+++ b/components/serverless-apollo-service/package.json
@@ -11,7 +11,7 @@
     "lodash.pick": "^4.4.0"
   },
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && cp -R serverless.js transform boilerplate dist/",
+    "build": "rm -rf dist && mkdir dist && cp -R serverless.js dist/",
     "postbuild": "cp package.json README.md LICENSE dist/",
     "prepublishOnly": "yarn build"
   },
