--- a/packages/app-template-site/package.json
+++ b/packages/app-template-site/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/webiny/webiny-js.git",
     "directory": "packages/app-template-site"
   },
-  "description": "Package for building Webiny app templates.",
+  "description": "Create a complete Webiny site.",
   "author": "Webiny Ltd",
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>",
@@ -18,9 +18,18 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^3.0.2",
-    "@webiny/app-template": "^1.0.0",
+    "@webiny/app-cookie-policy": "^3.0.8",
     "@webiny/app-i18n": "^3.1.0",
-    "@webiny/react-router": "^2.0.1"
+    "@webiny/app-form-builder": "^2.1.0",
+    "@webiny/app-form-builder-theme": "^2.0.7",
+    "@webiny/app-google-tag-manager": "^3.0.8",
+    "@webiny/app-mailchimp": "^3.0.9",
+    "@webiny/app-page-builder": "^3.2.0",
+    "@webiny/app-page-builder-theme": "^2.0.8",
+    "@webiny/app-template": "^1.0.0",
+    "@webiny/app-typeform": "^3.0.9",
+    "@webiny/react-router": "^2.0.1",
+    "react-apollo": "^3.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
