--- a/packages/app-template-site/tsconfig.json
+++ b/packages/app-template-site/tsconfig.json
@@ -4,6 +4,13 @@
     { "path": "../app" },
     { "path": "../app-i18n" },
     { "path": "../app-template" },
-    { "path": "../ui" }
+    { "path": "../app-cookie-policy" },
+    { "path": "../app-google-tag-manager" },
+    { "path": "../app-mailchimp" },
+    { "path": "../app-typeform" },
+    { "path": "../app-page-builder" },
+    { "path": "../app-page-builder-theme" },
+    { "path": "../app-form-builder" },
+    { "path": "../app-form-builder-theme" }
   ]
 }
