fix: add missing packages

--- a/packages/app-headless-cms/tsconfig.json
+++ b/packages/app-headless-cms/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "extends": "../../tsconfig",
   "references": [
+    { "path": "../app" },
+    { "path": "../app-admin" },
+    { "path": "../app-i18n" },
+    { "path": "../app-form-builder" },
+    { "path": "../app-page-builder" },
     { "path": "../form" },
-    { "path": "../app-i18n" }
+    { "path": "../plugins" }
+
   ]
 }
