--- a/packages/app-headless-cms/tsconfig.build.json
+++ b/packages/app-headless-cms/tsconfig.build.json
@@ -1,14 +1,29 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "dist", "../form", "../app-i18n"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "../app",
+    "../app-admin",
+    "../app-i18n",
+    "../app-form-builder",
+    "../app-page-builder",
+    "../form",
+    "../plugins"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
   "references": [
+    { "path": "../app/tsconfig.build.json" },
+    { "path": "../app-admin/tsconfig.build.json" },
+    { "path": "../app-i18n/tsconfig.build.json" },
+    { "path": "../app-form-builder/tsconfig.build.json" },
+    { "path": "../app-page-builder/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
-    { "path": "../app-i18n/tsconfig.build.json" }
+    { "path": "../plugins/tsconfig.build.json" }
   ]
 }
