chore(release): New release :tada: :rocket:
 - @webiny/api-form-builder@2.1.1-next.0
 - @webiny/api-i18n@3.0.4-next.0
 - @webiny/api-page-builder@3.1.1-next.0
 - @webiny/app-admin@3.0.6-next.0
 - @webiny/app-cookie-policy@3.0.9-next.0
 - @webiny/app-form-builder-theme@2.0.8-next.0
 - @webiny/app-form-builder@2.2.0-next.0
 - @webiny/app-google-tag-manager@3.0.9-next.0
 - @webiny/app-i18n@3.1.1-next.0
 - @webiny/app-mailchimp@3.0.10-next.0
 - @webiny/app-page-builder-theme@2.0.9-next.0
 - @webiny/app-page-builder@3.2.1-next.0
 - @webiny/app-plugin-security-cognito-theme@2.0.7-next.0
 - @webiny/app-plugin-security-cognito@3.0.6-next.0
 - @webiny/app-security@3.1.1-next.0
 - @webiny/app-typeform@3.0.10-next.0
 - @webiny/app@3.0.5-next.0
 - @webiny/form@3.0.2-next.0
 - @webiny/ui@3.2.0-next.0

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/ui",
-  "version": "3.1.0",
+  "version": "3.2.0-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -76,7 +76,7 @@
     "@storybook/addon-knobs": "^5.0.5",
     "@storybook/addon-links": "^5.0.5",
     "@storybook/react": "^5.2.8",
-    "@webiny/form": "^3.0.1",
+    "@webiny/form": "^3.0.2-next.0",
     "@webiny/storybook-utils": "^3.0.1",
     "@webiny/validation": "^3.0.1",
     "awesome-typescript-loader": "^5.2.1",
