--- a/packages/app-form-builder/package.json
+++ b/packages/app-form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-form-builder",
-  "version": "2.1.0",
+  "version": "2.2.0-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -18,15 +18,15 @@
     "@emotion/styled": "^10.0.17",
     "@rmwc/menu": "^5.6.0",
     "@svgr/webpack": "^4.3.2",
-    "@webiny/app": "^3.0.4",
-    "@webiny/app-admin": "^3.0.5",
-    "@webiny/app-i18n": "^3.1.0",
-    "@webiny/app-page-builder": "^3.2.0",
-    "@webiny/app-security": "^3.1.0",
-    "@webiny/form": "^3.0.1",
+    "@webiny/app": "^3.0.5-next.0",
+    "@webiny/app-admin": "^3.0.6-next.0",
+    "@webiny/app-i18n": "^3.1.1-next.0",
+    "@webiny/app-page-builder": "^3.2.1-next.0",
+    "@webiny/app-security": "^3.1.1-next.0",
+    "@webiny/form": "^3.0.2-next.0",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
-    "@webiny/ui": "^3.1.0",
+    "@webiny/ui": "^3.2.0-next.0",
     "@webiny/validation": "^3.0.1",
     "apollo-client": "^2.2.8",
     "emotion": "^10.0.17",
