--- a/packages/api-form-builder/package.json
+++ b/packages/api-form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-form-builder",
-  "version": "2.1.1-next.0",
+  "version": "2.1.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/api": "^3.0.2",
-    "@webiny/api-i18n": "^3.0.4-next.0",
+    "@webiny/api-i18n": "^3.0.4",
     "@webiny/api-security": "^3.1.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
