--- a/packages/app-cookie-policy/package.json
+++ b/packages/app-cookie-policy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-cookie-policy",
-  "version": "3.0.9-next.0",
+  "version": "3.0.9",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -11,12 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/app-admin": "^3.0.6-next.0",
-    "@webiny/app-page-builder": "^3.2.1-next.0",
-    "@webiny/app-security": "^3.1.1-next.0",
-    "@webiny/form": "^3.0.2-next.0",
+    "@webiny/app-admin": "^3.0.6",
+    "@webiny/app-page-builder": "^3.2.1",
+    "@webiny/app-security": "^3.1.1",
+    "@webiny/form": "^3.0.2",
     "@webiny/react-router": "^2.0.2",
-    "@webiny/ui": "^3.2.0-next.0",
+    "@webiny/ui": "^3.2.0",
     "@webiny/validation": "^3.0.1",
     "load-src": "^1.0.0",
     "lodash.get": "^4.4.2",
