--- a/packages/app-form-builder-theme/package.json
+++ b/packages/app-form-builder-theme/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@webiny/app-form-builder-theme",
-  "version": "2.0.8-next.1",
+  "version": "2.0.8",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@webiny/app-form-builder": "^2.2.0-next.1",
-    "@webiny/app-i18n": "^3.1.1-next.0",
-    "@webiny/form": "^3.0.2-next.0",
+    "@webiny/app-form-builder": "^2.2.0",
+    "@webiny/app-i18n": "^3.1.1",
+    "@webiny/form": "^3.0.2",
     "@webiny/validation": "^3.0.1"
   },
   "peerDependencies": {
