--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-i18n",
-  "version": "3.1.1-next.0",
+  "version": "3.1.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,13 +15,13 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.17",
-    "@webiny/app": "^3.0.5-next.0",
-    "@webiny/app-admin": "^3.0.6-next.0",
-    "@webiny/app-security": "^3.1.1-next.0",
-    "@webiny/form": "^3.0.2-next.0",
+    "@webiny/app": "^3.0.5",
+    "@webiny/app-admin": "^3.0.6",
+    "@webiny/app-security": "^3.1.1",
+    "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
-    "@webiny/ui": "^3.2.0-next.0",
+    "@webiny/ui": "^3.2.0",
     "@webiny/validation": "^3.0.1",
     "classnames": "^2.2.6",
     "emotion": "10.0.17",
