--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/form",
-  "version": "3.0.2-next.0",
+  "version": "3.0.2",
   "main": "index.js",
   "repository": {
     "type": "git",
