fix: improve app and SSR bundling

--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -23,6 +23,9 @@
     "@testing-library/user-event": "^7.1.2",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "@webiny/http-handler": "^2.1.0",
+    "@webiny/http-handler-files": "^2.0.3",
+    "@webiny/http-handler-ssr": "^2.1.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
