--- a/package.json
+++ b/package.json
@@ -130,8 +130,7 @@
   "lint-staged": {
     "**/*.js": [
       "adio",
-      "prettier --write",
-      "eslint --fix",
+      "prettier --config .prettierrc.js --write",
       "git add",
       "jest --config jest.config.js --findRelatedTests"
     ]
