chore: prevent hoisting @types/mocha
So that building the packages (ie: with "yarn build:packages") works.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     ],
     "nohoist": [
       "**/inquirer/**",
-      "**/mime/**"
+      "**/mime/**",
+      "**/@types/mocha"
     ]
   },
   "contributors": [
