--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "components/*",
-      "examples/apps/*",
-      "examples/api/services/*"
+      "sample-project/apps/*",
+      "sample-project/api/services/*"
     ],
     "nohoist": [
       "**/inquirer/**",
@@ -108,7 +107,7 @@
     "watch:apps": "lerna run watch --scope=@webiny/app* --stream --parallel",
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
     "watch:packages": "lerna run watch --scope=@webiny/* --ignore=@webiny/serv* --stream --parallel",
-    "clear-dist": "yarn rimraf components/*/dist packages/*/dist",
+    "clear-dist": "yarn rimraf packages/*/dist",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "commit": "node ./scripts/commitizen.js",
