--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/ui",
-  "version": "3.2.0",
+  "version": "3.2.1-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
