--- a/components/serverless-aws-cloudfront/package.json
+++ b/components/serverless-aws-cloudfront/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/serverless-aws-cloudfront",
-  "version": "3.0.3-next.0",
+  "version": "3.0.3",
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
