--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-page-builder",
-  "version": "3.1.3-next.0",
+  "version": "3.1.3",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
     "@webiny/api-security": "^3.1.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
-    "@webiny/http-handler-ssr": "^2.2.0-next.0",
+    "@webiny/http-handler-ssr": "^2.2.0",
     "@webiny/validation": "^3.0.1",
     "download": "^5.0.3",
     "extract-zip": "^1.6.7",
