--- a/packages/app-google-tag-manager/package.json
+++ b/packages/app-google-tag-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-google-tag-manager",
-  "version": "3.0.12-next.0",
+  "version": "3.0.12",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -11,12 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/app-admin": "^3.0.7-next.0",
-    "@webiny/app-page-builder": "^3.2.4-next.0",
-    "@webiny/app-security": "^3.1.2-next.0",
+    "@webiny/app-admin": "^3.0.7",
+    "@webiny/app-page-builder": "^3.2.4",
+    "@webiny/app-security": "^3.1.2",
     "@webiny/form": "^3.0.2",
     "@webiny/react-router": "^2.0.2",
-    "@webiny/ui": "^3.2.1-next.0",
+    "@webiny/ui": "^3.2.1",
     "lodash.get": "^4.4.2",
     "react-helmet": "^5.2.0"
   },
