--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-page-builder",
-  "version": "3.2.4-next.0",
+  "version": "3.2.4",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -19,13 +19,13 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@rmwc/menu": "^5.6.0",
     "@svgr/webpack": "^4.3.2",
-    "@webiny/app": "^3.0.6-next.0",
-    "@webiny/app-admin": "^3.0.7-next.0",
-    "@webiny/app-security": "^3.1.2-next.0",
+    "@webiny/app": "^3.0.6",
+    "@webiny/app-admin": "^3.0.7",
+    "@webiny/app-security": "^3.1.2",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
-    "@webiny/ui": "^3.2.1-next.0",
+    "@webiny/ui": "^3.2.1",
     "@webiny/validation": "^3.0.1",
     "aos": "^2.3.4",
     "classnames": "^2.2.6",
