fix: disable acceleration for the "serverless-files" component

--- a/packages/cli/create/template/api/serverless.yml
+++ b/packages/cli/create/template/api/serverless.yml
@@ -82,6 +82,8 @@ files:
   inputs:
     region: ${vars.region}
     bucket: ${vars.bucket}
+    storage:
+      accelerated: false
     functions:
       apolloService:
         memory: 512
