--- a/examples/api/serverless.yml
+++ b/examples/api/serverless.yml
@@ -84,6 +84,8 @@ files:
   inputs:
     region: ${vars.region}
     bucket: ${vars.bucket}
+    storage:
+      accelerated: false
     functions:
       apolloService:
         memory: 512
