chore(release): New release :tada: :rocket:
 - @webiny/serverless-files@3.1.0-next.0
 - @webiny/serverless-page-builder@3.0.4-next.0
 - @webiny/cli@3.2.7-next.0

--- a/components/serverless-page-builder/package.json
+++ b/components/serverless-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/serverless-page-builder",
-  "version": "3.0.3",
+  "version": "3.0.4-next.0",
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
