--- a/components/serverless-files/package.json
+++ b/components/serverless-files/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/serverless-files",
-  "version": "3.0.2",
+  "version": "3.1.0-next.0",
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
