--- a/components/serverless-page-builder/package.json
+++ b/components/serverless-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/serverless-page-builder",
-  "version": "3.0.4-next.0",
+  "version": "3.0.4",
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
