--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/cli",
-  "version": "3.2.7-next.0",
+  "version": "3.2.7",
   "main": "index.js",
   "bin": {
     "webiny": "./bin.js",
