chore: update contributors list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -148,6 +148,20 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/13711406?v=4",
       "profile": "https://github.com/Arvisix",
       "contributions": []
+    },
+    {
+      "login": "Ashu96",
+      "name": "Ashutosh",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/13612227?v=4",
+      "profile": "https://ashu96.github.io/",
+      "contributions": []
+    },
+    {
+      "login": "Jeremytijal",
+      "name": "Jeremytijal",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/40340340?v=4",
+      "profile": "https://github.com/Jeremytijal",
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
