chore: remove unused dependency

--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "cross-env": "^5.2.0",
     "cypress": "^3.8.0",
     "cz-customizable": "^5.2.0",
-    "dotenv": "^5.0.1",
     "empty": "^0.10.1",
     "env-ci": "2.0.1",
     "eslint": "^6.8.0",
@@ -123,7 +122,7 @@
     "commit:no-verify": "yarn commit --no-verify",
     "commit:verify": "yarn lint-staged",
     "lint-staged": "lint-staged",
-    "postinstall": "node ./scripts/linkPackages.js",
+    "postinstall": "node ./scripts/linkPackages.js && node ./scripts/linkCommodo.js",
     "prettier": "prettier --config .prettierrc.js --write",
     "setup-repo": "node scripts/setupRepo",
     "test": "jest --config jest.config.js",
