Fixing adio errors for packages not included.

--- a/packages/app-headless-cms/package.json
+++ b/packages/app-headless-cms/package.json
@@ -31,12 +31,18 @@
     "@webiny/react-router": "^2.0.2",
     "@webiny/ui": "^3.0.4",
     "@webiny/validation": "^3.0.1",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
     "emotion": "^10.0.17",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.10",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
+    "pluralize": "^8.0.0",
     "react-apollo": "^3.1.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
@@ -46,6 +52,7 @@
     "react-sortable-hoc": "^1.9.1",
     "react-virtualized": "^9.21.2",
     "shortid": "^2.2.14",
+    "slugify": "^1.4.0",
     "timeago-react": "^2.0.0",
     "use-react-router": "^1.0.7"
   },
