--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -17,21 +17,27 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/graphql": "^1.0.0",
+    "@webiny/api": "^3.0.2",
     "@webiny/api-i18n": "^3.0.0",
+    "@webiny/api-plugin-create-apollo-handler": "^2.0.2",
     "@webiny/api-security": "^3.0.0",
     "@webiny/commodo": "^3.0.0",
     "@webiny/commodo-graphql": "^3.0.0",
+    "@webiny/graphql": "^1.0.0",
     "@webiny/http-handler": "^2.1.0",
     "@webiny/validation": "^3.0.0",
-    "@webiny/api-plugin-create-apollo-handler": "^2.0.2",
+    "apollo-server-lambda": "^2.12.0",
+    "boolean": "^3.0.1",
     "fecha": "^4.0.0",
     "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.forown": "^4.4.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isobject": "^3.0.2",
     "lodash.merge": "^4.6.2",
     "lodash.upperfirst": "^4.3.1",
-    "lodash.forown": "^4.4.0",
-    "lodash.isobject": "^3.0.2",
-    "lodash.clonedeep": "^4.5.0",
+    "mongodb": "^3.5.6",
     "pluralize": "^8.0.0"
   },
   "devDependencies": {
@@ -39,8 +45,8 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "@commodo/fields-storage": "^1.0.3",
     "@commodo/fields": "^1.0.2",
+    "@commodo/fields-storage": "^1.0.3",
     "@commodo/name": "^1.1.0",
     "@shelf/jest-mongodb": "^1.1.3",
     "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
