--- a/packages/app-google-tag-manager/package.json
+++ b/packages/app-google-tag-manager/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@webiny/app": "^3.0.6",
     "@webiny/app-admin": "^3.0.5",
     "@webiny/app-page-builder": "^3.2.0",
     "@webiny/app-security": "^3.1.0",
