--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -20,12 +20,20 @@
     "@webiny/app": "^3.0.2",
     "@webiny/app-admin": "^3.0.2",
     "@webiny/app-i18n": "^3.0.2",
-    "@webiny/app-security": "^3.0.3",
     "@webiny/app-plugin-security-cognito": "^3.0.2",
     "@webiny/app-plugin-security-cognito-theme": "^2.0.3",
+    "@webiny/app-security": "^3.0.3",
     "@webiny/app-template": "^1.0.0",
     "@webiny/react-router": "^2.0.1",
-    "@webiny/ui": "^3.1.0"
+    "@webiny/ui": "^3.1.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "emotion": "^10.0.27",
+    "graphql-tag": "^2.10.3",
+    "react-apollo": "^3.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
