chore: add "build" script to build the entire repo

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
+    "build": "lerna run build --scope=@webiny/* --stream",
     "build:components": "lerna run build --scope=@webiny/serverless-* --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
     "build:app-templates": "lerna run build --scope=@webiny/app-template* --stream",
