--- a/sample-project/api/services/pageBuilder/package.json
+++ b/sample-project/api/services/pageBuilder/package.json
@@ -10,6 +10,6 @@
     "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
     "@webiny/api-security": "^3.1.0",
     "@webiny/api-i18n": "^3.0.3",
-    "@webiny/api-form-builder": "^2.1.0"
+    "@webiny/api-page-builder": "^3.1.3"
   }
 }
