--- a/packages/app-security/package.json
+++ b/packages/app-security/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-security",
-  "version": "3.1.2",
+  "version": "3.1.3-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-admin": "^3.0.7",
+    "@webiny/app-admin": "^3.0.8-next.0",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
