--- a/packages/api-plugin-page-builder-resolvers-mongodb/package.json
+++ b/packages/api-plugin-page-builder-resolvers-mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-plugin-page-builder-resolvers-mongodb",
-  "version": "2.0.2-next.0",
+  "version": "2.0.2",
   "main": "index.js",
   "license": "MIT",
   "repository": {
