--- a/packages/app-cookie-policy/package.json
+++ b/packages/app-cookie-policy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-cookie-policy",
-  "version": "3.0.13-next.1",
+  "version": "3.0.13",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -11,9 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/app-admin": "^3.0.8-next.0",
-    "@webiny/app-page-builder": "^3.3.0-next.1",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-admin": "^3.0.8",
+    "@webiny/app-page-builder": "^3.3.0",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/react-router": "^2.0.2",
     "@webiny/ui": "^3.2.1",
