--- a/packages/app-form-builder-theme/package.json
+++ b/packages/app-form-builder-theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@webiny/app-form-builder-theme",
-  "version": "2.0.12-next.1",
+  "version": "2.0.12",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@webiny/app-form-builder": "^2.2.4-next.1",
-    "@webiny/app-i18n": "^3.1.3-next.0",
+    "@webiny/app-form-builder": "^2.2.4",
+    "@webiny/app-i18n": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/validation": "^3.0.1"
   },
