--- a/packages/app-form-builder/package.json
+++ b/packages/app-form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-form-builder",
-  "version": "2.2.4-next.1",
+  "version": "2.2.4",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -19,10 +19,10 @@
     "@rmwc/menu": "^5.6.0",
     "@svgr/webpack": "^4.3.2",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-admin": "^3.0.8-next.0",
-    "@webiny/app-i18n": "^3.1.3-next.0",
-    "@webiny/app-page-builder": "^3.3.0-next.1",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-admin": "^3.0.8",
+    "@webiny/app-i18n": "^3.1.3",
+    "@webiny/app-page-builder": "^3.3.0",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
