--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-i18n",
-  "version": "3.1.3-next.0",
+  "version": "3.1.3",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -16,8 +16,8 @@
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.17",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-admin": "^3.0.8-next.0",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-admin": "^3.0.8",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
