--- a/packages/app-mailchimp/package.json
+++ b/packages/app-mailchimp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-mailchimp",
-  "version": "3.0.14-next.1",
+  "version": "3.0.14",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -13,9 +13,9 @@
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.17",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-admin": "^3.0.8-next.0",
-    "@webiny/app-page-builder": "^3.3.0-next.1",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-admin": "^3.0.8",
+    "@webiny/app-page-builder": "^3.3.0",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
