--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-page-builder",
-  "version": "3.3.0-next.1",
+  "version": "3.3.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
     "@rmwc/menu": "^5.6.0",
     "@svgr/webpack": "^4.3.2",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-admin": "^3.0.8-next.0",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-admin": "^3.0.8",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
