--- a/packages/app-plugin-security-cognito-theme/package.json
+++ b/packages/app-plugin-security-cognito-theme/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@webiny/app-plugin-security-cognito-theme",
-  "version": "2.0.9-next.0",
+  "version": "2.0.9",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@emotion/styled": "^10.0.17",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-i18n": "^3.1.3-next.0",
-    "@webiny/app-plugin-security-cognito": "^3.0.8-next.0",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-i18n": "^3.1.3",
+    "@webiny/app-plugin-security-cognito": "^3.0.8",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/form": "^3.0.2",
     "@webiny/ui": "^3.2.1",
     "@webiny/validation": "^3.0.1",
