--- a/packages/app-plugin-security-cognito/package.json
+++ b/packages/app-plugin-security-cognito/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-plugin-security-cognito",
-  "version": "3.0.8-next.0",
+  "version": "3.0.8",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "dependencies": {
     "@aws-amplify/auth": "^1.3.3",
     "@webiny/app": "^3.0.6",
-    "@webiny/app-security": "^3.1.3-next.0",
+    "@webiny/app-security": "^3.1.3",
     "@webiny/plugins": "^3.0.1",
     "@webiny/ui": "^3.2.1",
     "graphql-tag": "^2.10.1",
