--- a/packages/app-typeform/package.json
+++ b/packages/app-typeform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-typeform",
-  "version": "3.0.14-next.1",
+  "version": "3.0.14",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.17",
-    "@webiny/app-page-builder": "^3.3.0-next.1",
+    "@webiny/app-page-builder": "^3.3.0",
     "@webiny/ui": "^3.2.1",
     "@webiny/validation": "^3.0.1",
     "lodash": "^4.17.4"
