--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/project-utils",
-  "version": "1.0.2-next.0",
+  "version": "1.0.2",
   "main": "index.js",
   "description": "A collection of utilities for Webiny project.",
   "repository": {
