Removed unused backup directory. Added typescript depedency. Linked depedencies for apps/admin and apps/api to their local package counterparts.

--- a/packages/cwp-template-basic/package.json
+++ b/packages/cwp-template-basic/package.json
@@ -1,14 +1,13 @@
 {
     "name": "cwp-template-basic",
-    "version": "0.1.32",
+    "version": "0.1.34",
     "repository": {
       "type": "git",
       "directory": "packages/cwp-template-basic"
     },
     "workspaces": {
       "packages": [
-        "apps/admin/",
-        "apps/site/"
+        "apps/*"
       ]
     }
 }
