--- a/packages/cwp-template-basic/template/apps/site/package.json
+++ b/packages/cwp-template-basic/template/apps/site/package.json
@@ -1,26 +1,26 @@
 {
   "name": "site",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@webiny/app": "^3",
-    "@webiny/app-cookie-policy": "^3",
-    "@webiny/app-form-builder": "^2",
-    "@webiny/app-google-tag-manager": "^3",
-    "@webiny/app-i18n": "^3",
-    "@webiny/app-mailchimp": "^3",
-    "@webiny/app-page-builder": "^3",
-    "@webiny/app-page-builder-theme": "^2",
-    "@webiny/app-typeform": "^3",
-    "@webiny/plugins": "^3",
-    "@webiny/react-router": "^2",
+    "@webiny/app": "file:../../../../app",
+    "@webiny/app-cookie-policy": "file:../../../../app-cookie-policy",
+    "@webiny/app-form-builder": "file:../../../../app-form-builder",
+    "@webiny/app-google-tag-manager": "file:../../../../app-google-tag-manager",
+    "@webiny/app-i18n": "file:../../../../app-i18n",
+    "@webiny/app-mailchimp": "file:../../../../app-mailchimp",
+    "@webiny/app-page-builder": "file:../../../../app-page-builder",
+    "@webiny/app-page-builder-theme": "file:../../../../app-page-builder-theme",
+    "@webiny/app-typeform": "file:../../../../app-typeform",
+    "@webiny/plugins": "file:../../../../plugins",
+    "@webiny/react-router": "file:../../../../react-router",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-link-batch-http": "^1.2.3",
     "apollo-link-http": "^1.5.9",
     "core-js": "^3.2.1",
     "cross-fetch": "^3.0.2",
-    "env-cmd": "^9.0.3",
     "emotion": "^10.0.27",
+    "env-cmd": "^9.0.3",
     "isutf8": "^2.1.0",
     "react-apollo": "^3.1.0",
     "react-app-env": "^1.2.3",
@@ -51,10 +51,10 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build:dev":  "env-cmd -r .env.json -e default,dev webiny run build",
+    "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build",
-    "build:ssr:dev":  "env-cmd -r .env.json -e default,dev webiny run build-ssr",
-    "build:ssr:prod":  "env-cmd -r .env.json -e default,prod webiny run build-ssr",
+    "build:ssr:dev": "env-cmd -r .env.json -e default,dev webiny run build-ssr",
+    "build:ssr:prod": "env-cmd -r .env.json -e default,prod webiny run build-ssr",
     "start": "env-cmd -r .env.json -e default,local webiny run start"
   },
   "browserslist": {
