--- a/packages/cwp-template-basic/template/apps/admin/tsconfig.json
+++ b/packages/cwp-template-basic/template/apps/admin/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../tsconfig",
   "include": ["src"],
-  "exclude": ["../../../packages/app-template-admin-full"],
+  "exclude": ["../../../../app-template-admin-full"],
   "references": [
-    { "path": "../../../packages/app-template-admin-full/tsconfig.build.json" }
+    { "path": "../../../../app-template-admin-full/tsconfig.build.json" }
   ]
 }
