--- a/packages/cwp-template-basic/template/apps/site/tsconfig.json
+++ b/packages/cwp-template-basic/template/apps/site/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../tsconfig",
   "include": ["src"],
   "exclude": ["../../../packages/app-template-site"],
   "references": [
