--- a/packages/storybook-utils/package.json
+++ b/packages/storybook-utils/package.json
@@ -36,6 +36,6 @@
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
-    "postbuild": "tsc -p tsconfig.build.json"
+    "postbuild": "cp package.json dist/ && tsc -p tsconfig.build.json"
   }
 }
