chore: update license and add a NOTICE.txt

--- a/packages/serverless-component/package.json
+++ b/packages/serverless-component/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@webiny/serverless-component",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "Apache 2.0",
+  "author": "Serverless, Inc.",
+  "contributors": [
+    "Pavel Denisjuk <pavel@webiny.com>"
+  ],
   "dependencies": {},
   "publishConfig": {
     "access": "public",
