fix: add build script in template

--- a/packages/cli-scaffold-graphql-service/template/package.json
+++ b/packages/cli-scaffold-graphql-service/template/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
+  "scripts": {
+    "build": "webiny run build"
+  },
   "dependencies": {
     "@webiny/http-handler": "^2.1.0",
     "@webiny/http-handler-apollo-server": "^1.0.0",
