Abstracted all file copying and setup specific to cwp-template-full.

--- a/packages/cwp-template-full/package.json
+++ b/packages/cwp-template-full/package.json
@@ -8,5 +8,9 @@
   "publishConfig": {
     "access": "public",
     "directory": "."
+  },
+  "dependencies": {
+    "fs-extra": "^9.0.0",
+    "uuid": "^7.0.3"
   }
 }
