--- a/packages/app-headless-cms/tsconfig.json
+++ b/packages/app-headless-cms/tsconfig.json
@@ -4,6 +4,8 @@
     { "path": "../app" },
     { "path": "../app-admin" },
     { "path": "../app-i18n" },
+    { "path": "../app-form-builder" },
+    { "path": "../app-page-builder" },
     { "path": "../form" },
     { "path": "../plugins" }
 
