chore: add AWS resources removal tool

--- a/package.json
+++ b/package.json
@@ -79,11 +79,13 @@
     "husky": "^4.2.3",
     "inquirer": "^7.0.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-checkbox-plus-prompt": "^1.0.1",
     "inquirer-maxlength-input-prompt": "^1.0.0",
     "jest": "^24.9.0",
     "jest-extended": "^0.11.2",
     "lerna": "3.19.0",
     "lint-staged": "^7.2.2",
+    "listr": "^0.14.3",
     "load-json-file": "^6.2.0",
     "lodash": "^4.17.11",
     "longest": "^2.0.1",
@@ -91,6 +93,7 @@
     "node-fetch": "^2.6.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
+    "rxjs": "^6.5.5",
     "semver": "^6.3.0",
     "serverless": "^1.53.0",
     "serverless-dotenv-plugin": "^2.1.1",
