chore: add scripts to TS exclusions

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -119,6 +119,7 @@
     "node_modules",
     "**/__tests__/**",
     "dist",
+    "./scripts/**",
     "**jest**",
     "./packages/cli",
     "./packages/serverless-api-gateway",
